Show progress bar in system tray when Tether device is scanning.

Bug: 754491, 672263
Change-Id: I437f07207e36083ee310197843518d1fd398f525
Reviewed-on: https://chromium-review.googlesource.com/615666
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Leslie Watkins <lesliewatkins@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494892}
Former-commit-id: 43c8c33283670cd828c7ca92b4f2b908911b07a1