ash/system/network/network_state_list_detailed_view.cc
@@ -285,9 +285,12 @@ void NetworkStateListDetailedView::UpdateHeaderButtons() {
         nullptr);
   }
   if (list_type_ == LIST_TYPE_NETWORK) {
+    NetworkStateHandler* network_state_handler =
+        NetworkHandler::Get()->network_state_handler();
+    // TODO(crbug.com/756092): Add | operator to NetworkTypePattern.
     const bool scanning =
-        NetworkHandler::Get()->network_state_handler()->GetScanningByType(
-            NetworkTypePattern::WiFi());
+        network_state_handler->GetScanningByType(NetworkTypePattern::WiFi()) ||
+        network_state_handler->GetScanningByType(NetworkTypePattern::Tether());
     ShowProgress(-1, scanning);
   }
 }
